Fleshing outline. need to write all night

--- a/latex/outline/outline.tex
+++ b/latex/outline/outline.tex
@@ -1,3 +1,6 @@
+\documentclass[11pt]{report}
+
+\begin{document}
 For each topic I need: 
 \begin{itemize} 
 \item Related works (various methods used)
@@ -57,4 +60,12 @@ For example:
 
 
 My approach: 
-iterate through papers. update each section with citation and how they approach the subject. Add paper reference to a table indicating their use of algorithms/approaches. 
+iterate through papers. update each section with citation and how they approach the subject. Add paper reference to a table indicating their use of algorithms/approaches.
+
+
+\section{Flow} 
+The first task is to iterate through references and associate each one with a section. I need to write-up the process of assembling an RBF-FD problem and solving it. Then I need details of GPU computing, followed by details of pre-conditioning systems.   
+
+The easiest section to start with will be GPU computing for PDEs (Euler-class).
+
+\end{document}
