Working on related work

--- a/latex/appendix2.tex
+++ b/latex/appendix2.tex
@@ -143,12 +143,7 @@ But the question is, how accurate is it? In situations where memory is critical 
 
 \section{Test Cases} 
 
-We computed direct and indirect approaches for the following node sets:
-\begin{verbatim} 
-'md010.00121'; 'md015.00256'; 'md019.00400'; 'md028.00841'; 
-'md031.01024'; 'md049.02500'; 'md063.04096'; 'md079.06400'; 
-'md089.08100' ; 'md100.10201' ; 'md127.16384' ; 'md165.27556'
-\end{verbatim}
+We computed direct and indirect approaches for the MD-node sets with size $N = \{121, 256, 400, 841, 1024, 2500, 4096, 6400, 8100, 10201, 16384, 27556\}$.
 
 We check the relative error of the approximation: 
 $$ \text{relative $\ell_{2}$ error} = \frac{|| f_{approx} - f_{exact} ||_{2} }{ || f_{exact} ||_{2} } $$ 
