--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -86,29 +86,24 @@
 
 \mainmatter
 
-%\input{chapter1.tex}
-%\input{RBFFD_as_SpMV.tex}
-%\input{SpMV_GPU.tex}
-%\input{GMRES.tex}
+\input{preliminaries.tex}
+\input{RBFFD_as_SpMV.tex}
+\input{SpMV_GPU.tex}
+\input{GMRES.tex}
 \input{ViennaCL.tex}
-%\input{future_of_gpus.tex}
-%\input{chapter2.tex}
-%\input{chapter3.tex} 
-%\input{chapter4.tex} 
-%\input{chapter5.tex} 
-%\input{chapter6.tex}
-%\input{chapter7.tex}
-%\input{publications.tex}
+\input{future_of_gpus.tex}
+\input{chapter2.tex}
+\input{chapter3.tex} 
+\input{chapter4.tex} 
+\input{chapter5.tex} 
+\input{chapter6.tex}
+\input{chapter7.tex}
+\input{publications.tex}
 
-%%\input{introduction.tex} 
-%%\input{grid_generation.tex}
-%%\input{parabolic_equations.tex}
-%%\input{hyperbolic_equations.tex}
-%%\input{parallel_gmres.tex} 
-
-%\appendix
-%\input{appendix1.tex}
-%\input{appendix2.tex}
+\appendix
+\input{notation_and_symbols.tex}
+\input{appendix1.tex}
+\input{appendix2.tex}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
