--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -26,6 +26,7 @@
 ]{hyperref}
 
 \usepackage{dsfont}
+\usepackage{standalone}
 
 \title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
@@ -86,24 +87,25 @@
 
 \mainmatter
 
-\input{preliminaries.tex}
-\input{RBFFD_as_SpMV.tex}
-\input{SpMV_GPU.tex}
-\input{GMRES.tex}
-\input{ViennaCL.tex}
-\input{future_of_gpus.tex}
-\input{chapter2.tex}
-\input{chapter3.tex} 
-\input{chapter4.tex} 
-\input{chapter5.tex} 
-\input{chapter6.tex}
-\input{chapter7.tex}
-\input{publications.tex}
-
-\appendix
-\input{notation_and_symbols.tex}
-\input{appendix1.tex}
-\input{appendix2.tex}
+\include{introduction}
+\include{related_work}
+%\input{RBFFD_as_SpMV.tex}
+%\input{SpMV_GPU.tex}
+%\input{GMRES.tex}
+%\input{ViennaCL.tex}
+%\input{future_of_gpus.tex}
+%\input{chapter2.tex}
+%\input{chapter3.tex} 
+%\input{chapter4.tex} 
+%\input{chapter5.tex} 
+%\input{chapter6.tex}
+%\input{chapter7.tex}
+%\input{publications.tex}
+%
+%\appendix
+%\input{notation_and_symbols.tex}
+%\input{appendix1.tex}
+%\input{appendix2.tex}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
