--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -25,8 +25,8 @@
 
 \usepackage{dsfont}
 %%%% USEPACKAGES for MACROS %%%%%
-%\usepackage{algpseudocode}
-%\usepackage[chapter]{algorithm}
+\usepackage{algpseudocode}
+\usepackage[chapter]{algorithm}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{url}
