--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -48,13 +48,13 @@
 \include{introduction}
 \include{related_work}
 \include{rbffd_method}
-\include{choosing_epsilon}
 \include{distributed_solver}
 \include{RBFFD_as_SpMV}
 \include{SpMV_GPU}
 \include{GMRES}
 \include{ViennaCL.tex}
 \include{future_of_gpus.tex}
+\include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
 \include{performance_analysis} 
 \include{ordering_and_preconditioning}
