--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -24,7 +24,7 @@
     linkcolor=red,%
     urlcolor=red, 
 ]{hyperref}
-
+cece
 \usepackage{dsfont}
 
 \title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
@@ -97,28 +97,27 @@
 
 
 
+\input{chapter1.tex}
+\input{hpc_challenges_lead_to_gpu.tex}
+\input{RBFFD_as_SpMV.tex}
+\input{SpMV_GPU.tex}
+\input{GMRES.tex}
+\input{ViennaCL.tex}
+\input{future_of_gpus.tex}
+\input{chapter2.tex}
+\input{chapter3.tex} 
+\input{chapter4.tex} 
+\input{chapter5.tex} 
+\input{chapter6.tex}
+\input{chapter7.tex}
+\input{publications.tex}
 
-%\input{chapter1.tex}
-%\input{hpc_challenges_lead_to_gpu.tex}
-%\input{RBFFD_as_SpMV.tex}
-%\input{SpMV_GPU.tex}
-%\input{GMRES.tex}
-%\input{ViennaCL.tex}
-%\input{future_of_gpus.tex}
-%\input{chapter2.tex}
-%\input{chapter3.tex} 
-%\input{chapter4.tex} 
-%\input{chapter5.tex} 
-%\input{chapter6.tex}
-%\input{chapter7.tex}
-%\input{publications.tex}
-
-%\input{grid_generation.tex}
+\input{grid_generation.tex}
 
 %
 %\appendix
-%\input{appendix1.tex}
-%\input{appendix2.tex}
+\input{appendix1.tex}
+\input{appendix2.tex}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
