--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -12,6 +12,9 @@
 \begin{document}
 \fi
 
+% TODO: this chapter can be broken up into inputs from subdirectory
+{ \graphicspath{{rbffd_methods_content/}} 
+
 %introduction
 %	- argue what we show within (i.e., first GPGPU, first multi-CPU, approximate nearest neighbors, etc.)
 %numerical method
@@ -39,6 +42,238 @@ This chapter is dedicated to summarizing the 40 year history of RBF methods lead
 
 %TODO: follow timeline of methods. how did they evolve into RBF-FD? 
 We present three collocation methods: Kansa's method, Fasshauer's method and Direct collocation, and discuss extensions that lead to local interpolation matrices instead of a single global interpolation matrix. Finally, we discuss the most recent methods for solving PDEs, emphasizing RBF-FD as the focus of this work. 
+
+\section{Survey of Related Work}
+
+%TODO: expand with new literature since 2009
+%TODO: any new classifications? 
+%TODO: any new methods?
+
+In Radial Basis Function methods, radially symmetric functions provide a non-orthogonal basis used to interpolate between 
+nodes of a point cloud. RBFs are univariate and a function of distance from a center point defined in $\R^N$, so 
+they easily extend into higher dimensions without significant change in programming complexity. RBFs have been shown in 
+some cases to have exponential convergence for function approximation \cite{Fasshauer2007}. It is also possible to 
+reformulate RBF methods as pseudospectral methods that have 
+generated solutions to ill-posed problems for which Chebyshev-based and other pseudospectral methods 
+fail \cite{Fasshauer2006}. However, as with all methods, RBFs come with certain limitations. For example, RBF interpolation is---in general---not a well-posed problem, so it requires careful choice of positive definite or conditionally positive definite basis functions (see \cite{Iske2004, Fasshauer2007} for details). Furthermore, in 1995,  
+Schaback \cite{Schaback1995} observed an \emph{Uncertainty Relation}: none of the commonly used RBFs combine 
+good approximation with numerically stable interpolation. In other words, increasing accuracy can result in worse conditioning, 
+whereas improving conditioning reduces accuracy \cite{Schaback1995, Iske2004}. 
+
+
+\input{rbffd_methods_content/rbf_table}
+
+RBF methods for interpolation first appeared in 1971 with Hardy's seminal research on multiquadrics
+\cite{Hardy1971}. In his 1982 survey of scattered data interpolation methods \cite{Franke1982}, Franke rated multiquadrics first-in-class against 28 other methods (3 of which were RBFs) \cite{Franke1982}. Many other RBFs, 
+including those presented in Table~\ref{tbl:rbfs} have been applied in literature, but for PDEs in particular, none have rivaled the 
+attention received by multiquadrics. 
+
+
+By 1990, the understanding of the scientific community regarding RBFs was sufficiently developed for application to PDEs through 
+collocation. In Table~\ref{tbl:rbfcolloctypes} we classify references according to their choice of collocation method and RBF 
+interpolation type. 
+
+%\togordon{general problem statement:} 
+%\togordon{added purpose stmt} 
+We seek the solution to a PDE with the form
+\begin{eqnarray*}
+(\diffop{u})(x_i) = \sum_{j=1}^{N} c_j \Phi_j(x_i) = f(x_i)
+\end{eqnarray*}
+where $\diffop{}$ is, in general, a nonlinear differential operator acting on $u(x)$. The solution $u(x)$ is expressed as a linear combination of $N$ basis functions $\Phi_j(x)$, not necessarily RBFs: 
+$$
+u(x) = \sum_{i=1}^N c_i \Phi_i(x)
+$$
+In the above expression, 
+$ \vec{c} = \{c_j\} $ is the unknown coefficient vector. Once one assumes $\mathcal{L}$ is a linear operator, one has several choices. One can collocate the differential equation equation, or one can express individual derivative operators as linear combinations of the unknowns $u_j$ (leading to the RBF-FD methods). In all cases, one ends up with a linear system of equations to invert, with different degrees of sparsity, dependent on the chosen basis functions and how the various constraints are enforced.  While we restrict the $\Phi_j(x)$ to RBFs or various operators applied to the RBFs, we note that spectral methods, finite-element or spectral-element methods can be formulated in a similar way with different choices of basis functions.  Of course, $u$ can be a vector of unknown variables ($c$ then becomes a matrix). In what follows, we refer to the matrix to invert as $A$. 
+%
+%I read your general purpose statement (p. 6). Not quite: what you write is more or less ok, but you expand u in a terms of basis functions (not specified, which is fine), but then you assume collocation. That is too early since you then cannot do FD-RBF. So I will say that we there are many ways to determine the coefficients, which we will analyze, and that in the methods we use, the $\Phi$ are either RBFs, operators applied to RBFs, or monomial functions.  (YOU FOLLOW?) I"ll mention that methods such as spectral methods, finite-element methods and finite-volume methods correspond to different choices of the $\Phi's$. (YOU UNDERSTAND THIS?)
+%
+%We write
+%\begin{eqnarray*}
+%A\vec{c} = \vec{f} \\
+%\vec{c} = A^{-1} \vec{f}
+%\end{eqnarray*}
+%where
+%\begin{eqnarray*}
+%A = \{ \Phi_j (x_i) \} = \{ \Phi_{ij} \}&  &\hskip1.5em\textrm{(Distance Matrix)} \\
+%\vec{c} = \{ c_j \}& &\hskip1.5em\textrm{(Coefficient Vector)} \\
+%\vec{f} = \{f(x_i)\}& &\hskip1.5em\textrm{(Known Function Values)} \\
+%N& &\hskip1.5em\textrm{(Total Number of Basis Functions)}
+%\end{eqnarray*}
+
+There are three main categories of RBF interpolation; we list them in Table~\ref{tbl:interp_types}. The first is \emph{Global} in the case that a single, large ($N\times N$) and 
+dense matrix corresponding to globally supported RBFs is inverted; second, \emph{Compact} if compactly supported RBFs are used to 
+produce a single, large, but sparse matrix; and third, \emph{Local} if compactly supported RBFs are used to produce many small but 
+dense matrices with one corresponding to each collocation point. In all three cases the matrices are symmetric and with the correct choice of RBF they are at least conditionally positive definite. 
+
+\begin{table}[t]
+   \centering
+   \begin{tabular}{E | C | C | C | c | } % Column formatting, @{} suppresses leading/trailing space
+   Interpolation Type & Dense/Sparse $A$ & Dim($A$) ($N_S \ll N$) &  \# of $A^{-1}$  & RBF Support \\ 
+   \hline \hline
+   Global & Dense & $N \times N$ & 1 & Global \\
+   Compact & Sparse & $N \times N$ & 1 & Compact \\
+   Local & Dense & $N_S \times N_S$ & N & Global/Compact
+   \end{tabular}
+   \caption{RBF interpolation types and properties, assuming a problem with $N$ nodes.}
+   \label{tbl:interp_types}
+\end{table}
+
+
+We note that three types of collocation occur throughout the RBF literature: 
+Kansa's unsymmetric collocation method \cite{Kansa1990a, Kansa1990b}, Fasshauer's symmetric collocation method \cite
+{Fasshauer1997}, and the Direct collocation method \cite{Fedoseyev2002}. While not a collocation method, RBF-FD represents the latest trend in solving PDEs with RBFs.  A full explanation of RBF based collocation is deferred to 
+Chapter~\ref{chap:rbf_pde}. 
+
+\input{rbffd_methods_content/rbftype_table}
+\input{rbffd_methods_content/rbf_examples}
+
+\subsection{Global RBF Methods}
+%TODO: improve collocation definition 
+
+\emph{Kansa's method} \cite{Kansa1990a, Kansa1990b} (a.k.a. unsymmetric collocation) was the first RBF method for PDEs, and is still the most frequently used collocation type. The idea behind Kansa's method is that an 
+approximate solution to the PDE can be found by finding an interpolant which satisfies the differential operator with zero residual at a set of \emph{collocation points} (these coincide with the RBF centers). To find the interpolant, the differential equation is formulated as a two block (unsymmetric) linear system with: 1) the approximation of values 
+at boundary 
+points with boundary data only, and 2) the approximation of interior points by directly applying the differential operator. Hon et al. \cite{Hon1999} employed Kansa's method to solve shallow water equations for Typhoon simulation. In 
+\cite{Flyer2009b}, Flyer and Wright employed Kansa's method for the solution of shallow water equations on a sphere. Their 
+results show that RBFs allow for longer time steps with spectral accuracy. It was 
+shown in \cite{Fasshauer1997, Hon2001} that the unsymmetric linear system produced by Kansa's method does not guarantee 
+non-singularity; although it is noted that in practice singularities are rare encounters \cite{Larsson2003}. 
+
+The second alternative for RBF collocation, is based on Hermite scattered 
+data interpolation (see \cite{Wu1992}). The so-called \emph{Fasshauer} or \emph{Symmetric Collocation} method (\cite{Fasshauer1997}) 
+performs a change of basis for the interpolant by directly applying the differential operator to the RBFs. It then collocates using the same approach as Kansa's method \cite{Stevens2009b, Larsson:2003}. The resulting block structure of the linear system is symmetric and 
+guaranteed to be non-singular \cite{Fasshauer1997}. In comparison to Kansa's method, the disadvantages of Fasshauer's method 
+include: a) requirement of higher order differentiability of the basis functions (to satisfy double application of the differential operator)
+% it has stronger regularity assumptions (it is Hermite interpolation), 
+and b) the linear system is larger and more complex to form
+%, and c) it is not ideally suited for non-linear problems
+ \cite{Fasshauer2007}. As \cite{Hon2001} points out, 
+the possible existence of a singularity in Kansa's method is not enough to justify the added difficulties of using Fasshauer's 
+method.
+
+The last method, \emph{Direct Collocation}, was introduced by Fedoseyev, Friedman and Kansa
+ \cite{Fedoseyev2002} and satisfies the differential operator on the interior and the boundary. Larsson and Fornberg \cite{Larsson2003} observe that this third method has a matrix structure similar to that found in Kansa's method; however, it is noted that the dimensions of the matrix blocks for each method differ. This is due to collocation constraints added for 
+the differential operator applied to the boundary. Aside from the survey on RBF collocation presented by Larsson and Fornberg \cite{Larsson2003}, no related 
+work was found that applied, or investigated, this method further. 
+%Also, it appears that Fasshauer \cite{Fasshauer2007} 
+%made the mistake of equating Kansa's method and the Direct method.
+
+
+%
+%In the survey on RBF collocation presented by Larsson and Fornberg \cite{Larsson2003}, it was found that performance of the 
+%collocation methods depends on the choice of RBFs (i.e., whether they are infinitely smooth or piecewise smooth). Their end 
+%conclusion, however, was that infinitely smooth RBFs are preferred for Elliptic PDEs as they do not require node placement 
+%optimization.
+
+
+\subsection{Compactly Support RBFs} 
+
+Thus far, all cases of collocation and interpolation mentioned have assumed globally supported RBFs. While global RBFs are well-studied and have nice properties, a major limitation is the large, dense system that must be solved. One alternative to global support is to use a set of compactly supported RBFs (CSRBFs) that are defined as: 
+\begin{equation}
+\Phi(r) = \begin{cases} \varphi(r) & r \in [0,1]\\
+0 & r > 1
+\end{cases}
+\label{eqn:csrbf}
+\end{equation}
+where a radius is defined past which the RBF has no influence on the interpolant. Note that the radius can be scaled to fit a desired support. Methods that leverage CSRBFs produce a global interpolation matrix that is \emph{sparse} and therefore results in a system that is more efficiently assembled and solved \cite{Fasshauer2007}. While often referred to as CSRBF, a compact support method analogous to Kansa's method was also introduced under the name \emph{radial point interpolation method (RPIM)} \cite{Wang2002}. The CSRBF method analogue to Fasshauer's method is known as \emph{radial point interpolation collocation method (RPICM)} \cite{Liu2005}. A more thorough survey of CSRBF history can be found in \cite{Fasshauer2007}
+
+CSRBFs have attracted a lot of attention in applications. For example, in the field of dynamic surface and image deformation, compact support allows for local transformations which do not induce global deformation (see e.g., \cite{Yang2008, Lin:2009, Correa2007}). 
+
+We note that sparsity and spectral accuracy cannot be achieved simultaneously. 
+
+
+\subsection{Local RBF Methods}
+Around 2005, \v{S}arler and Vertnik \cite{Sarler2006, Vertnik2006} demonstrated that if compactly supported RBFs are chosen, the traditional global 
+collocation matrix from Kansa's method, can be avoided altogether in favor of small localized collocation matrices defined for 
+each node. Local collocation still faces possible ill-conditioning and singularities 
+like global collocation, but make it easier to distribute computation across parallel systems. Also, the smaller linear systems can be 
+solved 
+with more ease and less ill-conditioning. In \cite{Sarler2006}, the authors consider 2D diffusion problems. Divo and Kassab \cite{Divo2007} %\toevan{something completely diff} 
+employ the 
+method for Poisson-like PDEs including fluid flow and heat transfer. Kosec and \v{S}arler \cite{Kosec2008} apply the 
+same technique to solve coupled heat transfer and fluid flow problems.
+
+In similar fashion, Stevens et al. \cite{Stevens2009a} introduced a local version of 
+Fasshauer's method called \emph{local Hermitian interpolation}. The authors have applied their method to 3D soil 
+problems based on transient Richards' equations \cite{Stevens2008a, Stevens:2009a, Stevens:2009b}.
+
+
+
+\subsection{RBF-FD}
+
+Another local alternative for solving PDEs with RBFs was presented by Wright and Fornberg \cite{Wright2004, Wright2006}. The method, called RBF-FD, combines scattered data interpolation to approximate function values and generalized finite difference stencils to approximate differential operators. This approach avoids collocation in the sense that the interpolant need not satisfy the differential operator at a set of collocation points. 
+%However, in the limit as RBF-FD stencils include all nodes in the domain, Kansa's method is reproduced \cite{Shu2006}. 
+%\togordon{Statement about RBF-FD and Kansa's method is given without proof.}
+
+According to Wright and Fornberg \cite{Wright2004}, RBF-FD (and \emph{RBF-HFD} for the Hermite version) was independently 
+proposed by many authors including Wright \cite{Wright2003} in his dissertation, Shu et al. \cite{Shu2003} and Cecil et al. \cite{Cecil2004}. A key difference between investigations was that Wright \cite{Wright2003} was able to bypass ill-conditioning of RBF-FD and investigate its behavior in the limit as $\varepsilon \rightarrow 0$ by means of the Contour-Pad\'{e} algorithm.
+
+Shu et al. \cite{Shu2006} compared the RBF-FD method to Least Squares FD (LSFD) in context of 2D incompressible viscous 
+cavity flow, and found that under similar conditions, the RBF-FD method was more accurate than LSFD, but the solution required 
+more iterations of an iterative solver. RBF-FD was applied to Poisson's 
+equation in \cite{Wright2004}.  Chandhini and Sanyasiraju \cite{Chandhini2007} studied it in context of 1D and 2D, 
+linear and non-linear, 
+convection-diffusion equations, demonstrating solutions that are non-oscillatory for high Reynolds number, with improved 
+accuracy over classical FD. An application to Hamilton-Jacobi problems \cite{Cecil2004}, and 2D linear and non-linear PDEs 
+including Navier-Stokes equations \cite{Shu2003} have all been considered. 
+
+
+
+
+\subsection{Recent Advances in Conditioning}
+
+Recently, Fornberg and Wright 
+\cite{Fornberg2004} presented the \emph{Contour--Pad\'{e} algorithm}, which allows for numerically stable 
+computation of highly 
+accurate interpolants for (very small) cases typically associated with ill-conditioning induced by nearly flat RBFs (i.e., $\varepsilon \rightarrow 0$). Larsson and Fornberg \cite{Larsson2003} 
+applied the 
+algorithm to all three methods of collocation (Kansa's, Fasshauer's and Direct Collocation) with considerable gain in accuracy over solutions from classical second-order FD and a pseudospectral method. Note that currently, the Contour-Pad\'{e} 
+algorithm was only studied for global RBF interpolation, not for compact or local methods. 
+
+The \emph{RBF-QR} method, an alternative for numerically stable computation in the limit as $\varepsilon \rightarrow 0$, was introduced by Fornberg  and 
+Piret \cite{Fornberg2007} in context of a sphere, and later extended to planar 2D problems in \cite{Fornberg2009b}. The 
+RBF-QR 
+method is simple 
+to implement (less than 100 lines of Matlab code), and it allows solution of large problems that are typically ill-conditioned. Fornberg, Larsson and Flyer \cite{Fornberg2009b} successfully applied RBF-QR on large problems with 6000 nodes for globally supported basis functions. 
+
+With these two algorithms, global RBF methods have overcome most ill-conditioning issues for small to mid-sized problems. Unfortunately, both Contour-Pad\'{e} and RBF-QR fail for large enough problems due to ill-conditioning. As the number of RBFs increases beyond a few thousand nodes it is impossible to avoid  ill-conditioning of the extremely large interpolation matrix.
+
+This reveals the benefit of local methods, which decrease the number of RBFs and ill-conditioning. However, in the limit as local stencil size increases to include all nodes in a domain, the local and global method are equivalent; thus it is known that local methods also suffer extreme ill-conditioning around 2000 nodes per stencil \cite{Shu2006}. To our our knowledge, no research has yet been published that applies the RBF-QR method to RBF-FD stencils.
+
+
+\subsection{Parallel RBF Implementations}
+%\togordon{Review this subsection: }
+
+Parallel implementations of RBF methods currently rely on parallel domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
+
+Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+Subdomains are processed independently. The derivative values 
+at artificial boundary points are averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+
+Kosec and \v{S}arler \cite{Kosec2008} used OpenMP to parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+Their test cases used local collocation, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available yet. 
+
+Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
+
+In this work, we will add to the above experiences, with the added twist of incorporating an implementation on the GPU (see later chapters). 
+
+%
+%In 2002, Mouat and Beatson \cite{Mouat2002} suggested that Matern functions would be more accurate than the more 
+%commonly chosen multiquadrics. 
+%The authors also considered the problem of a large number of nodes with a discussion of a 
+%domain decomposition method for PDE solution. 
+
 
 % TODO: add partition of unity discussion
 % TODO: add hermite discussion
@@ -1055,6 +1290,7 @@ While the $k$-D Tree functions well for queries, its downfall is a large cost in
 Approximate nearest neighbors will be nearly balanced. 
 We observe that RBF-FD functions as well on stencils of true nearest neighbors as it does on approximate nearest neighbors. 
 
+}
 
 \ifstandalone
 \bibliographystyle{plain}
