--- a/latex/rbffd_methods_content/rbftype_table.tex
+++ b/latex/rbffd_methods_content/rbftype_table.tex
@@ -1,15 +1,15 @@
 %Kansa collocation
-\newcommand{\kansaglobalrbf}[0]{\cite{Kansa:1990a, Kansa:1990b, Fasshauer:2006, Fornberg:2004, Mouat:2002, Hon:2001, Franke:1982, Flyer:2009b, Flyer:2007, Hon:1999, Fornberg:2008, Larsson:2003}}
-\newcommand{\kansacsrbf}[0]{\cite{Fornberg:2008, Wang:2002}}
-\newcommand{\kansalocalrbf}[0]{\cite{Divo:2007, Kosec:2008, Sarler:2006, Vertnik:2006}}
+\newcommand{\kansaglobalrbf}[0]{\cite{Kansa1990a, Kansa1990b, Fasshauer2006, Fornberg2004, Mouat2002, Hon2001, Franke1982, Flyer2009b, Flyer2007, Hon1999, Fornberg2008, Larsson2003}}
+\newcommand{\kansacsrbf}[0]{\cite{Fornberg2008, Wang2002}}
+\newcommand{\kansalocalrbf}[0]{\cite{Divo2007, Kosec2008, Sarler2006, Vertnik2006}}
 
 % Fasshauer collocation
-\newcommand{\fassglobalrbf}[0]{\cite{Fasshauer:2006, Fasshauer:1997, Larsson:2003}}
-\newcommand{\fasscsrbf}[0]{\cite{Liu:2005}}
-\newcommand{\fasslocalrbf}[0]{\cite{Stevens:2008a, Stevens:2009a, Stevens:2009b}}
+\newcommand{\fassglobalrbf}[0]{\cite{Fasshauer2006, Fasshauer1997, Larsson2003}}
+\newcommand{\fasscsrbf}[0]{\cite{Liu2005}}
+\newcommand{\fasslocalrbf}[0]{\cite{Stevens2008a, Stevens2009a, Stevens2009b}}
 
 % Direct collocation
-\newcommand{\directglobalrbf}[0]{\cite{Fedoseyev:2002, Larsson:2003}}
+\newcommand{\directglobalrbf}[0]{\cite{Fedoseyev2002, Larsson2003}}
 \newcommand{\directcsrbf}[0]{}
 \newcommand{\directlocalrbf}[0]{}
 
@@ -17,7 +17,7 @@
 % RBF-FD
 \newcommand{\rbffdglobalrbf}[0]{N/A}
 \newcommand{\rbffdcsrbf}[0]{N/A}
-\newcommand{\rbffdlocalrbf}[0]{\cite{Wright:2006,Wright:2003, Shu:2003, Cecil:2004, Wright:2004, Shu:2006, Chandhini:2007}}
+\newcommand{\rbffdlocalrbf}[0]{\cite{Wright2006,Wright2003, Shu2003, Cecil2004, Wright2004, Shu2006, Chandhini2007}}
 
 
 %\begin{sidewaystable}
